--- a/Sistema LibBug/src/View/RelatorioEmprestimos.form
+++ b/Sistema LibBug/src/View/RelatorioEmprestimos.form
@@ -33,11 +33,11 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="labelEditora">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="36" style="0"/>
-        </Property>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Relat&#xf3;rio de empr&#xe9;stimo"/>
       </Properties>
@@ -57,7 +57,7 @@
     <Component class="javax.swing.JLabel" name="labelTitulo2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="12" style="1"/>
+          <Font name="Tahoma" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Data de devolu&#xe7;&#xe3;o"/>
       </Properties>
